# valve_analytics_webapp

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  example.env  install.sh  pyproject.toml
.environment/ci/: app
.environment/local/: app  db
.github/: CODEOWNERS
.github/workflows/: pipeline.yml
authentication/management/commands/: initadmin.py
provision/docker/backend/local/: Dockerfile  entrypoint.sh
valve_analytics_webapp/: manage.py  pyproject.toml  settings.py  urls.py
valve_analytics_webapp/authentication/management/commands/: create_superuser.py
valve_analytics_webapp/valve_analytics_webapp/: asgi.py  settings.py  wsgi.py
