[tool.poetry]
name = "valve-analytics-webapp"
version = "0.1.0"
description = ""
authors = ["VladGaSik <vlad_ghaykovich@mail.ru>"]
readme = "README.md"
packages = [{include = "valve_analytics_webapp"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
